practice titanic task

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.7"
 services:
   ml_container:
     image: "tatsuki1107/ml_training"
+    container_name: ml_training
     volumes:
       - ./:/work
     ports:
