--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
 version: "3.7"
 services:
   ml_container:
-    image: "tatsuki1107/ml_training"
+    image: tatsuki1107/python_poetry
     container_name: ml_training
     volumes:
-      - ./:/work
+      - .:/app/work
+      - python_poetry_dockerhub:/app/
     ports:
       - 8888:8888
+    command: poetry run jupyter lab --allow-root --ip=0.0.0.0 --LabApp.token=""
     tty: true
+
+volumes:
+  python_poetry_dockerhub:
